--- a/templates/hammocks.html
+++ b/templates/hammocks.html
@@ -60,7 +60,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                       Products
                     </a>
                 </li>
-              </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -83,33 +82,60 @@ https://templatemo.com/tm-546-raheem-enterprises
     <br><br><br><br><h1 class="text-center">Bath Support Hammocks <em class="text-danger">Dashboard</em></h1>
 
     <div class="row">
-        <div class="col-3">
-            <img src="../static/images/bathings/hammocks/download.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/hammocks/images.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/hammocks/41C2BBYeuNL._SL500_._AC_SL500_.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/hammocks/71sgrNkzsIL._AC_SL1500_.jpg" height="300" width="300" alt="">
+        <div class="col-4">
+            <div>
+                <img src="../static/images/bathings/hammocks/images.jpeg" height="300" width="300" alt="">
+                                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/hammocks/41C2BBYeuNL._SL500_._AC_SL500_.jpg" height="300" width="300" alt="">
+                                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/hammocks/71sgrNkzsIL._AC_SL1500_.jpg" height="300" width="300" alt="">
+                                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/hammocks/b1f2b35577e76af3d506f1184fe3d84279840838_original.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/hammocks/https___starmerx.oss-cn-shanghai.aliyuncs.com_PTO_0B15_807563.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/hammocks/images%20(6).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/hammocks/images%20(5).jpeg" height="300" width="300" alt="">
+        <div class="col-4 mt-5">
+            <div>
+                <img src="../static/images/bathings/hammocks/b1f2b35577e76af3d506f1184fe3d84279840838_original.jpeg" height="300" width="300" alt="">
+                                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/hammocks/https___starmerx.oss-cn-shanghai.aliyuncs.com_PTO_0B15_807563.jpg" height="300" width="300" alt="">
+                                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/hammocks/images%20(5).jpeg" height="300" width="300" alt="">
+                                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/hammocks/images%20(4).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/hammocks/images%20(3).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/hammocks/images%20(2).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/hammocks/images%20(1).jpeg" height="300" width="300" alt="">
+        <div class="col-4">
+            <div>
+                <img src="../static/images/bathings/hammocks/images%20(3).jpeg" height="300" width="300" alt="">
+                                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/hammocks/images%20(2).jpeg" height="300" width="300" alt="">
+                                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/hammocks/images%20(1).jpeg" height="300" width="300" alt="">
+                                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/hammocks/images%20(8).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/hammocks/images%20(9).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/hammocks/41RZKSFQyuL._AC_SX425_.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/hammocks/baby-bath-tub-mesh-seat-support-sling-net-infant-bath-blue-tub-original-imaf8r9fjqrfckvd.jpeg" height="300" width="300" alt="">
-        </div>
          <a class="navbar-brand btn-block  text-center" href="/bathings"><h2><button>Bathings<em class="text-danger">Dashboard</em></button></h2></a>
          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
