--- a/templates/thermo.html
+++ b/templates/thermo.html
@@ -60,7 +60,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                       Products
                     </a>
                 </li>
-              </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -83,33 +82,60 @@ https://templatemo.com/tm-546-raheem-enterprises
 
     <br><br><br><br><h1 class="text-center">Bath Thermometer <em class="text-danger">Dashboard</em></h1>
     <div class="row">
-        <div class="col-3">
-            <img src="../static/images/bathings/thermo/images.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/thermo/download.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/thermo/51zzZa3xwdL.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/thermo/bath_thermometer___mineral.jpg" height="300" width="300" alt="">
+        <div class="col-4">
+            <div>
+                <img src="../static/images/bathings/thermo/images.jpeg" height="300" width="300" alt="">
+                                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/thermo/51zzZa3xwdL.jpg" height="300" width="300" alt="">
+                                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/thermo/bath_thermometer___mineral.jpg" height="300" width="300" alt="">
+                                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/thermo/Bath_thermometer_large.png" height="300" width="300" alt="">
-            <img src="../static/images/bathings/thermo/BILD3_10256187-90178_ml.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/thermo/chicco-infrared-ear-thermometer-bath-thermometer-blue--500x500.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/thermo/images%20(3).jpeg" height="300" width="300" alt="">
+        <div class="col-4 mt-5">
+            <div>
+                <img src="../static/images/bathings/thermo/Bath_thermometer_large.png" height="300" width="300" alt="">
+                                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/thermo/BILD3_10256187-90178_ml.jpg" height="300" width="300" alt="">
+                                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/thermo/chicco-infrared-ear-thermometer-bath-thermometer-blue--500x500.jpg" height="300" width="300" alt="">
+                                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/thermo/images%20(4).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/thermo/images%20(1).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/thermo/images%20(2).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/thermo/images%20(5).jpeg" height="300" width="300" alt="">
+        <div class="col-4">
+            <div>
+                <img src="../static/images/bathings/thermo/images%20(4).jpeg" height="300" width="300" alt="">
+                                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/thermo/images%20(1).jpeg" height="300" width="300" alt="">
+                                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/thermo/images%20(2).jpeg" height="300" width="300" alt="">
+                                <p>KES 1000</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/thermo/images%20(6).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/thermo/download%20(1).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/thermo/download%20(2).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/thermo/download%20(3).jpeg" height="300" width="300" alt="">
-        </div>
         <a class="navbar-brand btn-block  text-center" href="/bathings"><h2><button>Bathings<em class="text-danger">Dashboard</em></button></h2></a>
          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
