--- a/templates/tidies.html
+++ b/templates/tidies.html
@@ -60,7 +60,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                       Products
                     </a>
                 </li>
-              </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -84,32 +83,58 @@ https://templatemo.com/tm-546-raheem-enterprises
     <br><br><br><br><h1 class="text-center">Bath Tidies <em class="text-danger">Dashboard</em></h1>
 
     <div class="row">
-        <div class="col-3">
-            <img src="../static/images/bathings/tidies/1.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tidies/2.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tidies/3.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tidies/4.png" height="300" width="300" alt="">
+        <div class="col-4">
+            <div>
+                <img src="../static/images/bathings/tidies/1.jpg" height="300" width="300" alt="">
+                                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/tidies/2.jpg" height="300" width="300" alt="">
+                                                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/tidies/3.jpg" height="300" width="300" alt="">
+                                                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/tidies/5.png" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tidies/6.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tidies/7.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tidies/8.jpeg" height="300" width="300" alt="">
+        <div class="col-4 mt-5">
+            <div>
+                <img src="../static/images/bathings/tidies/6.jpeg" height="300" width="300" alt="">
+                                                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/tidies/7.jpg" height="300" width="300" alt="">
+                                                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/tidies/8.jpeg" height="300" width="300" alt="">
+                                                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/tidies/9.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tidies/10.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tidies/11.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tidies/12.jpeg" height="300" width="300" alt="">
-        </div>
-
-        <div class="col-3">
-            <img src="../static/images/bathings/tidies/13.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tidies/14.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tidies/15.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tidies/16.jpg" height="300" width="300" alt="">
+        <div class="col-4">
+            <div>
+                <img src="../static/images/bathings/tidies/14.jpeg" height="300" width="300" alt="">
+                                                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/tidies/15.jpg" height="300" width="300" alt="">
+                                                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/tidies/16.jpg" height="300" width="300" alt="">
+                                                <p>KES 2500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
          <a class="navbar-brand btn-block  text-center" href="/bathings"><h2><button>Bathings<em class="text-danger">Dashboard</em></button></h2></a>
          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
