--- a/templates/touch.html
+++ b/templates/touch.html
@@ -60,7 +60,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                       Products
                     </a>
                 </li>
-              </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -85,31 +84,75 @@ https://templatemo.com/tm-546-raheem-enterprises
 
   <div class="row">
       <div class="col-3">
-          <img src="../static/images/bathings/touch/images.jpeg" height="300" width="300" alt="">
-          <img src="../static/images/bathings/touch/download.jpeg" height="300" width="300" alt="">
-          <img src="../static/images/bathings/touch/41dcqKw61pL._SY355_.jpg" height="300" width="300" alt="">
-          <img src="../static/images/bathings/touch/61_MJK-ms0L._SL1500_700x700.jpg" height="300" width="300" alt="">
+        <div>
+            <img src="../static/images/bathings/touch/images.jpeg" height="300" width="300" alt="">
+                          <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+        <div>
+            <img src="../static/images/bathings/touch/download.jpeg" height="300" width="300" alt="">
+                          <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+        </div>
+          <div>
+              <img src="../static/images/bathings/touch/61_MJK-ms0L._SL1500_700x700.jpg" height="300" width="300" alt="">
+                            <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+      </div>
+
+      <div class="col-3 mt-5">
+          <div>
+              <img src="../static/images/bathings/touch/61h4Pg6V1YL._SL1500_.jpg" height="300" width="300" alt="">
+                            <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
+              <img src="../static/images/bathings/touch/0114be781b3c53447235a7a6eb91b8c117906276.jpg" height="300" width="300" alt="">
+                            <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
+              <img src="../static/images/bathings/touch/800-soft-touch-french-perfume-800-ml-wipro-original-imafgrhfdbp8ymdf.jpeg" height="300" width="300" alt="">
+                            <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+      </div>
+
+      <div class="col-3 mt-5">
+          <div>
+              <img src="../static/images/bathings/touch/286146.jpg" height="300" width="300" alt="">
+                            <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
+              <img src="../static/images/bathings/touch/soft4-600x600.jpg" height="300" width="300" alt="">
+                            <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
+              <img src="../static/images/bathings/touch/unnamed.jpg" height="300" width="300" alt="">
+                            <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
       </div>
 
       <div class="col-3">
-          <img src="../static/images/bathings/touch/61h4Pg6V1YL._SL1500_.jpg" height="300" width="300" alt="">
-          <img src="../static/images/bathings/touch/0114be781b3c53447235a7a6eb91b8c117906276.jpg" height="300" width="300" alt="">
-          <img src="../static/images/bathings/touch/800-soft-touch-french-perfume-800-ml-wipro-original-imafgrhfdbp8ymdf.jpeg" height="300" width="300" alt="">
-          <img src="../static/images/bathings/touch/800-soft-touch-ocean-breeze-800-ml-wipro-original-imafgrqfj6tafujz.jpeg" height="300" width="300" alt="">
-      </div>
-
-      <div class="col-3">
-          <img src="../static/images/bathings/touch/286146.jpg" height="300" width="300" alt="">
-          <img src="../static/images/bathings/touch/soft4-600x600.jpg" height="300" width="300" alt="">
-          <img src="../static/images/bathings/touch/unnamed.jpg" height="300" width="300" alt="">
-          <img src="../static/images/bathings/touch/images%20(3).jpeg" height="300" width="300" alt="">
-      </div>
-
-      <div class="col-3">
-          <img src="../static/images/bathings/touch/images%20(5).jpeg" height="300" width="300" alt="">
-          <img src="../static/images/bathings/touch/images%20(1).jpeg" height="300" width="300" alt="">
-          <img src="../static/images/bathings/touch/images%20(4).jpeg" height="300" width="300" alt="">
-          <img src="../static/images/bathings/touch/images%20(2).jpeg" height="300" width="300" alt="">
+          <div>
+              <img src="../static/images/bathings/touch/images%20(5).jpeg" height="300" width="300" alt="">
+                            <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
+              <img src="../static/images/bathings/touch/images%20(1).jpeg" height="300" width="300" alt="">
+                            <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
+          <div>
+              <img src="../static/images/bathings/touch/images%20(4).jpeg" height="300" width="300" alt="">
+                            <p>KES 1500</p>
+              <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+          </div>
       </div>
          <a class="navbar-brand btn-block  text-center" href="/bathings"><h2><button>Bathings<em class="text-danger">Dashboard</em></button></h2></a>
          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
