--- a/templates/tubs.html
+++ b/templates/tubs.html
@@ -60,7 +60,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                       Products
                     </a>
                 </li>
-              </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -85,33 +84,60 @@ https://templatemo.com/tm-546-raheem-enterprises
 
     <br><br><br><br><h1 class="text-center">Bathing Tubs <em class="text-danger">Dashboard</em></h1>
     <div class="row">
-        <div class="col-3">
-            <img src="../static/images/bathings/tub/images.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tub/51s6xAHY8GL._SL1080_.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tub/56e504259f23188470816c8b2ac34c3f.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tub/61FR1dnLozL._SL1500_.jpg" height="300" width="300" alt="">
+        <div class="col-4">
+            <div>
+                <img src="../static/images/bathings/tub/51s6xAHY8GL._SL1080_.jpg" height="300" width="300" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/tub/56e504259f23188470816c8b2ac34c3f.jpg" height="300" width="300" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/tub/61FR1dnLozL._SL1500_.jpg" height="300" width="300" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/tub/images%20(2).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tub/Rotho-TOP-Baby-Bathtub-lavender.14309a.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tub/baby-bath-tub-for-kids.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tub/Aristo-Baby-Toddler-Bath-Tub-SDL074568449-2-3cfe9.jpg" height="300" width="300" alt="">
+        <div class="col-4 mt-5">
+            <div>
+                <img src="../static/images/bathings/tub/Rotho-TOP-Baby-Bathtub-lavender.14309a.jpg" height="300" width="300" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/tub/baby-bath-tub-for-kids.jpg" height="300" width="300" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/tub/Aristo-Baby-Toddler-Bath-Tub-SDL074568449-2-3cfe9.jpg" height="300" width="300" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/tub/images%20(3).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tub/images%20(4).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tub/images%20(5).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tub/images%20(1).jpeg" height="300" width="300" alt="">
+        <div class="col-4">
+            <div>
+                <img src="../static/images/bathings/tub/images%20(4).jpeg" height="300" width="300" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/tub/images%20(5).jpeg" height="300" width="300" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
+            <div>
+                <img src="../static/images/bathings/tub/images%20(1).jpeg" height="300" width="300" alt="">
+                <p>KES 500</p>
+                <a href=""><i class="fas fa-cart-plus" style="height:30px; color: red"></i></a>
+            </div>
         </div>
 
-        <div class="col-3">
-            <img src="../static/images/bathings/tub/images%20(2).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tub/images%20(6).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tub/images%20(7).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/tub/Rotho-TOP-Baby-Bathtub-lavender.14309a%20(1).jpg" height="300" width="300" alt="">
-        </div>
          <a class="navbar-brand btn-block  text-center" href="/bathings"><h2><button>Bathings<em class="text-danger">Dashboard</em></button></h2></a>
          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
